# app-framework

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml  spec.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-15-websocket-stream-multiplexing.md  2026-04-20-application-shell.md  2026-04-22-widget-registry-phase2.md  2026-04-27-json-layout-persistence.md  2026-04-29-chart-plot.md
e2e/: app.spec.ts
examples/backend/: main.py  producers.py
examples/frontend/: package.json  vite.config.ts
examples/frontend/src/: main.tsx  shell.css
pypackages/framework-core/src/framework_core/: __init__.py  bus.py  control_stream.py  log_stream.py  stream_types.py  ws_bridge.py
pypackages/framework-core/tests/: test_control_stream.py  test_log_stream.py  test_stream_types.py  test_streams_integration.py
