[tool.uv.workspace]
members = ["pypackages/framework-core", "examples/backend"]

[project]
name = "app-framework"
version = "0.0.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "anyio[trio]>=4.0",
  "httpx>=0.27",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-anyio>=0.0.0",
  "ruff>=0.4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/", "examples/"]

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
ignore_errors = true